# funky-birthdays

./: cabal.project  default-nix.nix  funky-birthdays.cabal  shell-mhs-nope.nix
.github/workflows/: nix.yml.disabled
src/: webclient.hs
