cabal-version:      3.14

-- Newer versions complain
name:               funky-birthdays
version:            0.2.0.0
license:            AGPL-3.0-only
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
  hs-source-dirs:     lib
  exposed-modules:
    Constants
    Conversion
    Data
    ICalendar
    Map
    Ranges
    Round
    Types
    Utils

  build-depends:
    , base             ^>=4.22
    , bytestring       ^>=0.12.2
    , containers       ^>=0.8
    , data-default     ^>=0.8
    , iCalendar        ^>=0.4.1.1
    , numeric-prelude  ^>=0.4.4
    , text             ^>=2.1.2
    , time             ^>=1.16

  -- , datetime
  -- , datetime
  default-language:   GHC2024
  default-extensions: UnicodeSyntax

  if !arch(wasm32)
    ghc-options: -threaded

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

executable echoCal
  main-is:            echoCal.hs
  build-depends:
    , base             ^>=4.22
    , bytestring       ^>=0.12.2
    , containers       ^>=0.8
    , funky-birthdays  ^>=0.2
    , time             ^>=1.16

  -- , datetime
  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

executable writeCal
  main-is:            writeCal.hs
  build-depends:
    , base             ^>=4.22
    , bytestring       ^>=0.12.2
    , containers       ^>=0.8
    , funky-birthdays  ^>=0.2
    , time             ^>=1.16

  -- , datetime
  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

executable webclient
  if (!arch(javascript) && !arch(wasm32))
    buildable: False

  main-is:            webclient.hs
  build-depends:
    , base        ^>=4.22
    , reflex-dom  ^>=0.6.3.4
    , text        ^>=2.1.2

  -- , bytestring       ^>=0.12.2
  -- , containers       ^>=0.8
  -- , funky-birthdays  ^>=0.2
  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags
